projects/renren/eu-central-1/demo-eks/renren-fast/overlays/dev/istio-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: renren-fast-dr
spec:
  host: renren-fast
  subsets:
  - labels:
      stage: canary
    name: canary
  - labels:
      stage: release
    name: stable
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 300s
