projects/renren/eu-central-1/demo-eks/renren-fast/overlays/dev/istio-svc.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: renren-fast-svc
spec:
  hosts:
  - renren-fast
  http:
  - match:
    - port: 80
    - port: 443
    retries: {}
    route:
    - destination:
        host: renren-fast
        port:
          number: 80
        subset: stable
      weight: 100
  - match:
    - port: 8000
    retries: {}
    route:
    - destination:
        host: renren-fast
        port:
          number: 8000
        subset: stable
      weight: 100
  - match:
    - port: 9090
    retries: {}
    route:
    - destination:
        host: renren-fast
        port:
          number: 9090
        subset: stable
      weight: 100
